--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,1 +1,64 @@
-<p>progress works!</p>
+<!-- ============================================================== -->
+<!-- Start Page Content -->
+<!-- ============================================================== -->
+
+<div class="row">
+  <div class="col-12">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Barra de progreso {{ porcentaje1 }}</h5>
+        <div class="progress">
+          <div
+            class="progress-bar progress-bar-striped progress-bar-animated"
+            role="progressbar"
+            aria-valuenow="75"
+            aria-valuemin="0"
+            aria-valuemax="100"
+            [style.width]="porcentaje1 + '%'"
+          ></div>
+        </div>
+        <br />
+        <h5 class="card-title">Barra de progreso {{ porcentaje2 }}</h5>
+        <div class="progress">
+          <div
+            class="progress-bar progress-bar-striped progress-bar-animated bg-success"
+            role="progressbar"
+            aria-valuenow="75"
+            aria-valuemin="0"
+            aria-valuemax="100"
+            [style.width]="porcentaje2 + '%'"
+          ></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- ============================================================== -->
+<!-- End PAge Content -->
+<!-- ============================================================== -->
+
+<div class="row">
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+        <app-incrementador
+          nombre="Progress Azul"
+          [porcentaje]="porcentaje1"
+          (cambioValor)="porcentaje1 = $event"
+        ></app-incrementador>
+      </div>
+    </div>
+  </div>
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+        <app-incrementador
+          nombre="Progress Verde"
+          [porcentaje]="porcentaje2"
+          (cambioValor)="porcentaje2 = $event"
+        ></app-incrementador>
+      </div>
+    </div>
+  </div>
+</div>
