--- a/src/app/pages/graficas1/graficas1.component.html
+++ b/src/app/pages/graficas1/graficas1.component.html
@@ -1,1 +1,56 @@
-<p>graficas1 works!</p>
+<div class="row">
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+        <!--primera grafica-->
+        <app-grafico-dona
+          [chartType]="graficos.grafico1.type"
+          [chartLabels]="graficos.grafico1.labels"
+          [chartData]="graficos.grafico1.data"
+          [leyenda]="graficos.grafico1.leyenda"
+        ></app-grafico-dona>
+      </div>
+    </div>
+  </div>
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+        <!--segunda grafica-->
+        <app-grafico-dona
+        [chartType]="graficos.grafico2.type"
+          [chartLabels]="graficos.grafico2.labels"
+          [chartData]="graficos.grafico2.data"
+          [leyenda]="graficos.grafico2.leyenda"
+        ></app-grafico-dona>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+        <!--tercera grafica-->
+        <app-grafico-dona
+        [chartType]="graficos.grafico3.type"
+        [chartLabels]="graficos.grafico3.labels"
+        [chartData]="graficos.grafico3.data"
+        [leyenda]="graficos.grafico3.leyenda"
+        ></app-grafico-dona>
+      </div>
+    </div>
+  </div>
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+        <!--cuarta grafica-->
+        <app-grafico-dona
+        [chartType]="graficos.grafico4.type"
+        [chartLabels]="graficos.grafico4.labels"
+        [chartData]="graficos.grafico4.data"
+        [leyenda]="graficos.grafico4.leyenda"
+        ></app-grafico-dona>
+      </div>
+    </div>
+  </div>
+</div>
