--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,6 +12,7 @@
         class="form-horizontal form-material"
         id="loginform"
         action="index.html"
+        (ngSubmit)="ingresar()"
       >
         <a href="javascript:void(0)" class="text-center db"
           ><img src="assets/images/logo-icon.png" alt="Home"/><br /><img
@@ -20,22 +21,12 @@
         /></a>
         <div class="form-group m-t-40">
           <div class="col-xs-12">
-            <input
-              class="form-control"
-              type="text"
-              required=""
-              placeholder="Usuario"
-            />
+            <input class="form-control" type="text" placeholder="Usuario" />
           </div>
         </div>
         <div class="form-group">
           <div class="col-xs-12">
-            <input
-              class="form-control"
-              type="password"
-              required=""
-              placeholder="Clave"
-            />
+            <input class="form-control" type="password" placeholder="Clave" />
           </div>
         </div>
         <div class="form-group row">
@@ -62,7 +53,7 @@
               class="btn btn-info btn-lg btn-block text-uppercase btn-rounded"
               type="submit"
             >
-              Iniciar
+              Ingresar
             </button>
           </div>
         </div>
